--- a/src/App.css
+++ b/src/App.css
@@ -131,7 +131,18 @@ text-align: center;
   border-radius: 1rem;
   right: 10px;
 }
+.links{
+  width: 300px;
+  margin: 0 auto;
+  font-family: sans-serif;
+  border-bottom: 1px solid;
+  line-height: 1.4;
+  outline: none;
+  text-decoration: none;
+  padding: 2px 1px 0;
+  background-color: aliceblue;
+}
 
-  
+
 
 
